--- a/src/main/resources/templates/basket.html
+++ b/src/main/resources/templates/basket.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.protone.io/v2/browser-sdk.js"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/css/basket.css">
+    <link rel="stylesheet" href="/css/MEDIA.css">
     <title>장바구니</title>
 </head>
 <body>
