--- a/src/main/resources/templates/Q&A.html
+++ b/src/main/resources/templates/Q&A.html
@@ -2,6 +2,7 @@
 <html lang="ko" xmlns:th="http:/www.thymeleaf.org" >
 <head>
 <link rel="stylesheet" href="/css/news.css">
+	<link rel="stylesheet" href="/css/MEDIA.css">
 	<title>Q&A</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -190,24 +191,33 @@
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="/image/logo.png" class="head_logo_img_fixed">
-					</a>
-				</div>
-
-				<div class="icon_basket">
-					<a href="#">
-						<img src="/image/basket.png" class="icon_basket_img_fixed">
+						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="head_top_nav">
 					<nav class="head-menu-top-nav">
-						<ul>
-							<li class="top-nav01"><a href="/test/login">Sign In</a></li>
-							<li class="top-nav02"><a href="/register">Join Now</a></li>
-							<li class="top-nav03"><a href="#">My Page</a></li>
+						<ul sec:authorize="!isAuthenticated()">
+							<li class="top-nav01"><a href="/signin">Sign In</a></li>
+							<li class="top-nav02"><a href="/signup">Join Now</a></li>
+						</ul>
+						<ul sec:authorize="isAuthenticated()">
+							<li class="top-nav01"><a href="/logout">로그아웃</a></li>
+							<li class="top-nav02"><a href="/mypage">My Page</a></li>
 						</ul>
 					</nav>
+				</div>
+
+				<div class="head_top_icon">
+					<ul>
+						<li>
+							<div class="icon_basket">
+								<a href="/cart/list">
+									<img src="/image/basket.png" class="icon_basket_img_fixed">
+								</a>
+							</div>
+						</li>
+					</ul>
 				</div>
 
 				<div class="head_menu_wrap">
@@ -231,10 +241,10 @@
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
-											<a href="/menu">음료</a><br>
+											<a href="/menu">음료</a>
 										</li>
 										<li>
-											<a href="/menu">푸드</a><br>
+											<br><a href="/menu">푸드</a>
 										</li>
 									</ul>
 								</div>
@@ -254,7 +264,7 @@
 
 							<li>
 								<a href="/partnership" class="pc">PARTNERSHIP</a>
-								<a class="m head_menu_down">PARTNERSHIP	</a>
+								<a class="m head_menu_down">PARTNERSHIP </a>
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
@@ -265,20 +275,26 @@
 							</li>
 
 							<li>
-								<a href="/board/QnA" class="pc">NEWS</a>
+								<a href="/board/notice" class="pc">NEWS</a>
 								<a class="m head_menu_down">NEWS</a>
 								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
 									<ul>
 										<li>
-											<a href="/board/QnA">공지사항</a><br>
+											<a href="/board/notice">공지사항</a>
 										</li>
 										<li>
-											<a href="/board/QnA">Q&A</a><br>
+											<br><a href="/board/QnA">Q&A</a>
 										</li>
 									</ul>
 								</div>
 							</li>
 						</ul>
+					</div>
+				</div>
+
+				<div class="mobile_menu_icon_wrap m t">
+					<div class="mobile_menu_icon">
+						<div class="mobile_menu_icon_bar bar_black"></div>
 					</div>
 				</div>
 			</div>
@@ -493,38 +509,36 @@
 				</div>
 			</div>
 		</div>
-		<div class="foot_wrap">
-			<div class="foot">
-				<div class="cont_list cont_list_content">
-					<ul>
-						<li>
-							<div class="cont_text">
-								<div class="cont_list cont_list_m cont_list_m1">
-									<ul>
-										<li>
-											<div class="foot_logo">
-												<img src="/image/logo.png">
-											</div>
-										</li>
-									</ul>
-								</div>
-							</div>
-							<div class="cont_text foot_info">
-								<div class="cont_list cont_list_small cont_list_width_m">
-									<ul>
-										<li><b>(주)주식회사 부천대학교</b></li>
-										<li>대표자 박찬호</li>
-										<li>TEL : 032-610-3260</li>
-										<li>경기도 부천시 심곡동 신흥로56번길 25</li>
-										<li>개인정보보호 관리책임자 김영서</li>
-									</ul>
-								</div>
-							</div>
-						</li>
-					</ul>
-							</div>
-						</li>
-					</ul>
+			<div class="foot_wrap">
+				<div class="foot">
+					<div class="foot_terms">
+						<ul>
+							<li>
+								<a href="/">이용약관</a>
+							</li>
+							<li>
+								|
+							</li>
+							<li>
+								<a href="/">개인정보취급방침</a>
+							</li>
+						</ul>
+					</div>
+					<div class="foot_logo">
+						<img class="foot_logo" src="image/Cafe_logo_4.png" alt="Logo">
+					</div>
+					<div class="foot_cont">
+						<ul>
+							<li><b>(주)주식회사 부천대학교</li></b>
+							<li>경기도 부천시 심곡동 신흥로56번길 25</li>
+							<li>대표자 박찬호</li>
+							<li>E-mail 1111@gmail.com</li>
+							<li>TEL 032-610-3260</li>
+						</ul>
+						<ul class="copyright">
+							<li>Copyright © 2023 CafeDream. All rights reserved.</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
