--- a/src/main/resources/templates/brand.html
+++ b/src/main/resources/templates/brand.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/MEDIA.css">
 	<title>브랜드</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
@@ -187,103 +188,118 @@
 	</div>
 	<div class="wrap">
 <!--		여기부터-->
-		<div class="head_wrap"> 
+		<div class="head_wrap">
 			<div class="head">
 				<div class="head_logo">
 					<a href="/">
-						<img src="image/logo.png" class="head_logo_img_fixed">
-					</a>
-				</div>
-
-				<div class="icon_basket">
-					<a href="#">
-						<img src="image/basket.png" class="icon_basket_img_fixed">
+						<img src="image/Cafe_logo_4.png" class="head_logo_img_fixed">
 					</a>
 				</div>
 
 				<div class="head_top_nav">
 					<nav class="head-menu-top-nav">
-						<ul>     
-							<li class="top-nav01"><a href="/test/login">Sign In</a></li>
-							<li class="top-nav02"><a href="/register">Join Now</a></li>
-							<li class="top-nav03"><a href="#">My Page</a></li>
-						 </ul>
-					 </nav>
+						<ul sec:authorize="!isAuthenticated()">
+							<li class="top-nav01"><a href="/signin">Sign In</a></li>
+							<li class="top-nav02"><a href="/signup">Join Now</a></li>
+						</ul>
+						<ul sec:authorize="isAuthenticated()">
+							<li class="top-nav01"><a href="/logout">로그아웃</a></li>
+							<li class="top-nav02"><a href="/mypage">My Page</a></li>
+						</ul>
+					</nav>
 				</div>
-				
+
+				<div class="head_top_icon">
+					<ul>
+						<li>
+							<div class="icon_basket">
+								<a href="/cart/list">
+									<img src="/image/basket.png" class="icon_basket_img_fixed">
+								</a>
+							</div>
+						</li>
+					</ul>
+				</div>
+
 				<div class="head_menu_wrap">
 					<div class="head_menu">
 						<ul>
 							<li>
 								<a href="/brand" class="pc">ABOUT US</a>
 								<a class="m head_menu_down">ABOUT US</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="/brand">브랜드</a>
-											</li>
-										</ul>
-									</div>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/brand">브랜드</a>
+										</li>
+									</ul>
+								</div>
 							</li>
 
 							<li>
 								<a href="/menu" class="pc">MENU</a>
 								<a class="m head_menu_down">MENU</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="/menu">음료</a><br>
-											</li>
-											<li>
-												<a href="/menu">푸드</a><br>
-											</li>
-										</ul>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/menu">음료</a>
+										</li>
+										<li>
+											<br><a href="/menu">푸드</a>
+										</li>
+									</ul>
 								</div>
 							</li>
 
 							<li>
 								<a href="/store" class="pc">STORE</a>
 								<a class="m head_menu_down">STORE</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="/store">매장찾기</a>
-											</li>
-										</ul>
-									</div>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/store">매장찾기</a>
+										</li>
+									</ul>
+								</div>
 							</li>
 
 							<li>
 								<a href="/partnership" class="pc">PARTNERSHIP</a>
-								<a class="m head_menu_down">PARTNERSHIP	</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="/partnership">입점문의</a>
-											</li>
-										</ul>
-									</div>
+								<a class="m head_menu_down">PARTNERSHIP </a>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/partnership">입점문의</a>
+										</li>
+									</ul>
+								</div>
 							</li>
 
 							<li>
-								<a href="/board/QnA" class="pc">NEWS</a>
+								<a href="/board/notice" class="pc">NEWS</a>
 								<a class="m head_menu_down">NEWS</a>
-									<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
-										<ul>
-											<li>
-												<a href="/board/QnA">공지사항</a><br>
-											</li>
-											<li>
-												<a href="/board/QnA">Q&A</a><br>
-											</li>
-										</ul>
-									</div>
+								<div class="head_menu_down_menu cont_list cont_list1 cont_list_small cont_list_small1">
+									<ul>
+										<li>
+											<a href="/board/notice">공지사항</a>
+										</li>
+										<li>
+											<br><a href="/board/QnA">Q&A</a>
+										</li>
+									</ul>
+								</div>
 							</li>
 						</ul>
 					</div>
 				</div>
+
+				<div class="mobile_menu_icon_wrap m t">
+					<div class="mobile_menu_icon">
+						<div class="mobile_menu_icon_bar bar_black"></div>
+					</div>
+				</div>
 			</div>
-		</div>	
+		</div>
 	</div>	
 				<div class="mobile_menu_icon_wrap m t">
 					<div class="mobile_menu_icon">
