--- a/src/main/resources/templates/REGISTER_TERMS.html
+++ b/src/main/resources/templates/REGISTER_TERMS.html
@@ -8,9 +8,8 @@
 
 	<title id="titleJoin">회원가입 약관동의</title>
 	<script type="text/javascript" src="/common/js/esabsbuxkr.js?single"></script> <!-- 220117 수정 -->
-	<link href="/css/reset.css" rel="stylesheet">
-	<link href="/css/style.css" rel="stylesheet">
-	<link href="/css/style_mem.css" rel="stylesheet">
+	<link href="/css/RESET.css" rel="stylesheet">
+	<link href="/css/STYLE_MEM.css" rel="stylesheet">
 
 	<script>
 		(function (i, s, o, g, r, a, m) {
