--- a/src/main/resources/templates/LOGIN.html
+++ b/src/main/resources/templates/LOGIN.html
@@ -2,7 +2,7 @@
 <html lang="ko">
 <head>
 <link rel="stylesheet" href="/css/login.css">
-<link rel="stylesheet" href="/css/NewFile1.css">
+<link rel="stylesheet" href="/css/NewFile.css">
 	<link rel="stylesheet" href="/css/MEDIA.css">
 	<title>로그인</title>
 	<meta charset="UTF-8">
