--- a/src/main/resources/static/css/store.css
+++ b/src/main/resources/static/css/store.css
@@ -99,26 +99,28 @@
 	}
 
 /* head */
-	.header{position: fixed; top: 0;}
-	.head_wrap{background:#fff; position:absolute; top:0; width:100%; margin:auto 0; z-index:9999; vertical-align:middle; box-shadow:0px 0px 5px 0px rgba(0,0,0,0.1); padding:0px 50px;text-align:center; transition: All 0.2s ease; -webkit-transition: All 0.2s ease; -moz-transition: All 0.2s ease; -o-transition: All 0.2s ease;}
+	.header{position:fixed; top: 0;}
+	.head_wrap{background:#fff; position:fixed; top:0; width:100%; margin:auto 0; z-index:9999; vertical-align:middle; box-shadow:0px 0px 5px 0px rgba(0,0,0,0.1); padding:0px 50px;text-align:center; transition: All 0.2s ease; -webkit-transition: All 0.2s ease; -moz-transition: All 0.2s ease; -o-transition: All 0.2s ease;}
 	.main_body .head_wrap{background:none; box-shadow:none;}
-	.head_wrap .head{width:100%; max-width:1280px; margin:0 auto; position:relative; transition: All 0.2s ease; -webkit-transition: All 0.2s ease; -moz-transition: All 0.2s ease; -o-transition: All 0.2s ease;}
-	
-	.head_wrap .head .head_logo{max-width:280px; position:absolute; top:37px; text-align: center; left: -4%;}
+	.head_over{background:#fff !important; box-shadow:0px 0px 5px 0px rgba(0,0,0,0.1) !important;}
+	.head_fixed{background:#fff !important; box-shadow:0px 0px 5px 0px rgba(0,0,0,0.1) !important;}
+
+.head_wrap .head{width:100%; max-width:1280px; margin:0 auto; position:relative; transition: All 0.2s ease; -webkit-transition: All 0.2s ease; -moz-transition: All 0.2s ease; -o-transition: All 0.2s ease;}
+	.head_wrap .head .head_logo{max-width:280px; position:absolute; top:27px; text-align: center; left: -4%;}
 		.main_body .head_wrap .head .head_logo .head_logo_img{display:inline-block;}
 		.main_body .head_wrap .head .head_logo .head_logo_img_fixed{display:none;}
 		
 	.head_wrap .head .head_menu{width:100%; padding:0px 300px;}
-		.head_wrap .head .head_menu > ul{display:table; width:100%;}
-			.head_wrap .head .head_menu > ul > li{display:table-cell; width:16.66%; vertical-align:top;}
-				.head_wrap .head .head_menu > ul > li > a{display:block; padding:50px 0;;position:relative; font-weight:500; font-size:1.1em;}
-				.head_wrap .head .head_menu > ul > li > a:after{content:""; position:absolute; left:0; bottom:20px; width:0; height:1px; background:#1c1c1b; left:50%; -webkit-transform:translate(-50%,0); -ms-transform:translate(-50%,0); transform:translate(-50%,0); transition:All 0.2s ease; -webkit-transition:All 0.2s ease; -moz-transition:All 0.2s ease; -o-transition:All 0.2s ease;}
-					.head_wrap .head .head_menu > ul > li:hover a:after{width:50%; background-color: #FFEFD8;}
-					.head_wrap .head .head_menu > ul > .check{background:#FFEFD8;}
-					.head_wrap .head .head_menu > ul > .check a:after{width:50%;}
+				.head_wrap .head .head_menu > ul{display:table; width:100%;}
+					.head_wrap .head .head_menu > ul > li{display:table-cell; width:16.66%; vertical-align:top;}
+						.head_wrap .head .head_menu > ul > li > a{display:block; padding:40px 0; position:relative; font-weight:500; font-size:1.1em;}
+						.head_wrap .head .head_menu > ul > li > a:after{content:""; position:absolute; left:0; bottom:0; width:0; height:1px; background:#1c1c1b; left:50%; -webkit-transform:translate(-50%,0); -ms-transform:translate(-50%,0); transform:translate(-50%,0); transition:All 0.2s ease; -webkit-transition:All 0.2s ease; -moz-transition:All 0.2s ease; -o-transition:All 0.2s ease;}
+							.head_wrap .head .head_menu > ul > li:hover a:after{width:50%;}
+							.head_wrap .head .head_menu > ul > .check{background:#FFEFD8;}
+							.head_wrap .head .head_menu > ul > .check a:after{width:50%;}
 	
 	.head_menu_down_menu{display:block; font-size:0.9em; font-weight:500;}
-		.head_menu_down_menu ul li a{display:block; margin-top: -10px;}
+		.head_menu_down_menu ul li a{display:block; margin-top: -10px; display:block; font-weight:500;}
 			.head_menu_down_menu ul li a:hover{text-decoration:underline;}
 		.head_menu_down_menu{padding:20px;}
 		.head_menu_down_menu.check{background:#FFEFD8;}
@@ -134,6 +136,13 @@
 			.head_wrap .head .head_top_icon ul li{float:left; width:25px; height:25px; margin-left: 10px;} 
 				.head_wrap .head .head_top_icon ul li:hover{text-decoration: underline;}
 				.head_wrap .head .head_top_icon ul li a{display:flex; padding:3px; position:relative;}
+			
+			
+			.head_menu_down_menu{display:none; font-size:0.9em; font-weight:400;}
+				.head_menu_down_menu ul li a{display:block;}
+					.head_menu_down_menu ul li a:hover{text-decoration:underline;}
+				.head_menu_down_menu{padding:25px;}
+				.head_menu_down_menu.check{background:#fdd000;}
 
 
 
