--- a/src/main/resources/templates/adminMain.html
+++ b/src/main/resources/templates/adminMain.html
@@ -3,13 +3,13 @@
 
 
 <head>
-    <title>마이페이지</title>
-    <link rel="stylesheet" href="/css/MEDIA.css">
+    <title>관리자</title>
+    <link rel="stylesheet" href="media.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <link rel="stylesheet" href="/css/information.css">
     <link rel="stylesheet" href="/css/information1.css">
-    <link rel="stylesheet" href="/css/information2.css">
+    <link rel="stylesheet" href="/css/admin.css">
     <link rel="stylesheet" href="/css/mypage.css">
     <script src="http://code.jquery.com/jquery-latest.min.js"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap">
